.. SPDX-FileCopyrightText: 2024 The IceTray Contributors
..
.. SPDX-License-Identifier: BSD-2-Clause

.. _dataclasses-release-notes:

Release Notes
=============

main
----

June 18, 2024 don la dieu (nega at icecube.umd.edu)
---------------------------------------------------
IceTray Release v1.11.0

* Ensure that extension modules import cleanly (#3493)
* Run mypy in CI (#3480)
* mypy cleanup for core projects (#3414)
* Branch restructuring iceact dataclasses and adding tableio converter for iceact classes (#2987)
* SPDX tags for infrastructure files. (#3454)
* Add stubs for even more pybindings (#3413)
* Fix doxygen comments. (#3459)
* dataclasses - clean up typos (#3444)
* [dataclasses] Add SPDX tags (#3433)

March 14, 2023 don la dieu (nega at icecube.umd.edu)
----------------------------------------------------
IceTray Release v1.10.0

* Explicitly import tableio converters (#3412)
* Small bugfix to the pybindings of the MapOMKeyI3IceTopSLCCalibration (#3361)

Feb. 20, 2024 don la dieu (nega at icecube.umd.edu)
---------------------------------------------------
IceTray Release v1.9.2

* add some boost headers which presumably were implicit in the past
* Delete mailinglist files (#3357)
* Add upgrade rules to ruff (#3316)
* Remove all tab characters used for indentation from python files (#3300)

Dec. 14, 2023 don la dieu (nega at icecube.umd.edu)
---------------------------------------------------
IceTray Release v1.9.0

* Remove Uber Header (I3.h) (#3151)
* Update radcube (#3308)
* Remove naive datetime() objects (#3304)
* fix E703 useless-semicolon (#3266)
* general python cleanups (ruff/B018) (#3264)
* python ruff cleanup fix EXE001 (#3289)
* Pass an integer to randint in leap_second_test
* remove I3Test.ENSURE* family of convenience functions (#3192)
* added I3MapAntennaKeyAntennaKey

Sep. 28, 2023 don la dieu (nega at icecube.umd.edu)
---------------------------------------------------
IceTray Release v1.8.0
